--- a/MEGUWebMVC/Views/Shared/_MyLayout.cshtml
+++ b/MEGUWebMVC/Views/Shared/_MyLayout.cshtml
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Пасхальні св'ята @ViewData["Title"]</title>
+    <title>Docker AWS @ViewData["Title"]</title>
     <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="/css/cropper.min.css" rel="stylesheet"/>
@@ -17,17 +17,17 @@
     <header data-bs-theme="dark">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container">
-                <a class="navbar-brand" asp-action="Index" asp-controller="Categories">Категорік</a>
+                <a class="navbar-brand" asp-action="Index" asp-controller="Categories">MEGU AWS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link active" aria-current="page" asp-action="Index" asp-controller="Categories">Категорії</a>
-                        </li>
+                        </li> *@
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" asp-action="Index" asp-controller="Products">Продукти</a>
+                            <a class="nav-link active" aria-current="page" asp-action="Index" asp-controller="Products">Фільми</a>
                         </li>
                     </ul>
                     @if (User.Identity.IsAuthenticated)
