--- a/MEGUWebMVC/Views/Products/Index.cshtml
+++ b/MEGUWebMVC/Views/Products/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProductListViewModel
 
 <div class="container mt-5">
-	<h2 class="text-center mb-4">Категорії мультфільмів</h2>
+	<h2 class="text-center mb-4">Фільми</h2>
 
 	@await Html.PartialAsync("_ProductSearchItem", Model.Search)
 
