--- a/MEGUWebMVC/Views/Shared/_MyLayout.cshtml
+++ b/MEGUWebMVC/Views/Shared/_MyLayout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link active" aria-current="page" asp-action="Index" asp-controller="Categories">Категорії</a>
                         </li> *@
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" asp-action="Index" asp-controller="Products">Фільми--</a>
+                            <a class="nav-link active" aria-current="page" asp-action="Index" asp-controller="Products">Фільми</a>
                         </li>
                     </ul>
                     @if (User.Identity.IsAuthenticated)
